--- a/src/components/Tags/SingleTag/single-tag.module.scss
+++ b/src/components/Tags/SingleTag/single-tag.module.scss
@@ -1,7 +1,7 @@
 @import '../../../styles/variables.scss';
 
 .singletag {
-  background-color: $backgroundColor;
+  background-color: $accentColor;
   margin: 1rem;
   padding: .2rem;
   color: #fff;
