--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -1,8 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900');
+@import './variables.scss';
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: 'Lato', sans-serif;
+}
+
+body {
+  background: $backgroundColor;
 }
